<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity2">

    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_bgprofile"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />

            <ImageView
                android:id="@+id/imageBell"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_bell"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />

            <ImageView
                android:id="@+id/imagePin"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="95dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_pin"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack" />



            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/Title"
                android:background="@null"
                android:imeOptions="actionDone"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/titlegray"
                android:textSize="35sp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"

                />

            <TextView
                android:id="@+id/textKWLNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="1dp"
                android:textColor="@color/titlegray"
                android:textSize="20sp"
                android:text="@string/kwlnotes"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="@id/imagePin"
                app:layout_constraintStart_toStartOf="@id/imageBack"

                />


            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/titlegray"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@id/imagePin"
                app:layout_constraintStart_toStartOf="@+id/imagePin"
                app:layout_constraintTop_toBottomOf="@+id/imagePin" />

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="380dp"
                android:background="@null"
                android:hint="@string/Description"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/titlegray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle" />

            <TextView
                android:id="@+id/textQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textColor="@color/black"
                android:text="@string/know"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@id/inputNote"
                app:layout_constraintStart_toStartOf="@+id/inputNote"
                app:layout_constraintTop_toBottomOf="@+id/inputNote" />

            <EditText
                android:id="@+id/inputQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="280dp"
                android:background="@null"
                android:hint="@string/inputQuestion"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/titlegray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textQuestion" />

            <TextView
                android:id="@+id/textKeyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textColor="@color/black"
                android:text="@string/what"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@id/inputQuestion"
                app:layout_constraintStart_toStartOf="@+id/inputQuestion"
                app:layout_constraintTop_toBottomOf="@+id/inputQuestion" />

            <EditText
                android:id="@+id/inputKeyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="165dp"
                android:background="@null"
                android:hint="@string/inputKeyword"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/titlegray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textKeyword" />

            <TextView
                android:id="@+id/textConclusion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textColor="@color/black"
                android:text="@string/learned"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="@id/inputKeyword"
                app:layout_constraintStart_toStartOf="@+id/inputKeyword"
                app:layout_constraintTop_toBottomOf="@+id/inputKeyword" />

            <EditText
                android:id="@+id/inputConclusion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="50dp"
                android:background="@null"
                android:hint="@string/Description"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="50dp"
                android:textColor="@color/black"
                android:textColorHint="@color/titlegray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textConclusion" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/ic_bottombg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="40dp"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="bottom|center" />

    <ImageView
        android:id="@+id/imageAddNote"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add_note"
        app:layout_anchor="@id/layoutQuickActions"
        app:layout_anchorGravity="bottom"/>

    <ImageView
        android:id="@+id/imagePaint"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_paint"
        app:layout_anchor="@id/imageAddNote"
        app:layout_anchorGravity="bottom"/>

    <ImageView
        android:id="@+id/imageItalic"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_a_btn"
        app:layout_anchor="@id/imagePaint"
        app:layout_anchorGravity="bottom"/>

    <TextView
        android:id="@+id/editedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:contentDescription="@string/app_name"
        android:textColor="@color/white"
        android:text="@string/EditedDate"
        android:textSize="16sp"
        app:layout_anchor="@id/imageItalic"
        app:layout_anchorGravity="bottom" />

    <ImageView
        android:id="@+id/imageDot"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="350dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_dot_note"
        app:layout_anchor="@id/editedDate"
        app:layout_anchorGravity="bottom"/>





</androidx.coordinatorlayout.widget.CoordinatorLayout>